test: add some selectable text to the page
To help test the Range support.

--- a/test.html
+++ b/test.html
@@ -5,10 +5,13 @@
   </head>
   <body>
     <div id="a">
+      here is some text inside "a"
       <div id="c">
+        here is some text inside "c"
       </div>
     </div>
     <div id="b">
+      here is some text inside "b"
     </div>
     <script src="build/build.js"></script>
     <script>
